--- a/ch_qt/beam_app/mainwindow.ui
+++ b/ch_qt/beam_app/mainwindow.ui
@@ -106,12 +106,12 @@ QMenu::item {
     /*min-height: 0px;*/
     /*min-width: 150px;*/
     font-size: 13px;
-    /*background-color: rgba(255, 0, 0, 0.98);*/
+    /*background-color: rgba(200, 200, 200, 0.98);*/
 
 }
 
 QMenu::item:selected {
-    /*background-color: #e9e9e9;*/
+  background-color: rgb(175, 175, 175);
 }
 
 QMenu::icon {
